log
Mon 20 Mar 2023 09:52:14 PM UTC: 
 tests:  0|6
total_score: 0/70
8bf0802
Tue 21 Mar 2023 07:19:48 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size=0;
      |       ^~
Compilation failed
e451833
Tue 21 Mar 2023 07:20:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   list->head=NULL;
      |       ^~
list.c:32:22: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list=(List*) malloc(sizeof(list));
      |                      ^~~~~~~~~~~~~~~~~~~~
list.c:34:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   list->tail=NULL;
      |       ^~
list.c:32:22: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list=(List*) malloc(sizeof(list));
      |                      ^~~~~~~~~~~~~~~~~~~~
list.c:35:7: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   list->current=NULL;
      |       ^~
list.c:32:22: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List* list=(List*) malloc(sizeof(list));
      |                      ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
04a107b
Tue 21 Mar 2023 07:21:11 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f8be012
Tue 21 Mar 2023 07:21:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |     list->head=NULL;
      |         ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List* list=(List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:34:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |     list->tail=NULL;
      |         ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List* list=(List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
list.c:35:9: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |     list->current=NULL;
      |         ^~
list.c:32:24: note: referencing an object of size 8 allocated by ‘malloc’
   32 |     List* list=(List*) malloc(sizeof(list));
      |                        ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
100c969
Tue 21 Mar 2023 07:23:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c9d8cb6
Tue 21 Mar 2023 07:30:50 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
017788e
Tue 21 Mar 2023 07:34:31 PM UTC: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
0bb320f
Tue 21 Mar 2023 07:36:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
57ce9ff
Tue 21 Mar 2023 07:38:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dd06e02
Tue 21 Mar 2023 07:38:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:20: error: ‘list->head’ is a pointer; did you mean to use ‘->’?
   41 |   return list->head.dato;
      |                    ^
      |                    ->
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
67c4a0c
Tue 21 Mar 2023 07:39:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:20: error: ‘list->head’ is a pointer; did you mean to use ‘->’?
   41 |   return list->head.data;
      |                    ^
      |                    ->
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2ebdb81
Tue 21 Mar 2023 07:39:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1d5744d
Tue 21 Mar 2023 07:40:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1097a7f
Thu 23 Mar 2023 03:45:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2984bf1
